# tower-mcp

./: .gitignore  .mcp.json  AGENTS.md  CHANGELOG.md  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  ROADMAP.md  SECURITY.md  VERSIONING.md  client-conformance-baseline.yml  cliff.toml  conformance-baseline-client.yml  conformance-baseline-draft.yml  conformance-baseline.yml  release-plz.toml
.github/: dependabot.yml
.github/scripts/: sync-seps.js
.github/workflows/: ci.yml  codeql.yml  conformance.yml  deploy-demo.yml  release-plz.yml  sep-sync.yml
crates/tower-mcp/: CHANGELOG.md  Cargo.toml
crates/tower-mcp-macros/: CHANGELOG.md  Cargo.toml
crates/tower-mcp-macros/src/: lib.rs
crates/tower-mcp-types/: CHANGELOG.md  Cargo.toml
crates/tower-mcp-types/src/: error.rs  lib.rs  protocol.rs  testing.rs
crates/tower-mcp/src/: async_task.rs  auth.rs  context.rs  deployment.rs  event_store.rs  extract.rs  jsonrpc.rs  lib.rs  prompt.rs  protocol.rs  registry.rs  resource.rs  router.rs  session.rs  session_store.rs  stateless.rs  testing.rs  tool.rs
crates/tower-mcp/src/client/: channel.rs  http.rs  mod.rs  oauth_authcode.rs  stdio.rs  transport.rs
crates/tower-mcp/src/middleware/: audit.rs  circuit_breaker.rs  mod.rs  tool_call_logging.rs  tracing.rs
crates/tower-mcp/src/oauth/: error.rs  metadata.rs  middleware.rs  mod.rs  token.rs
crates/tower-mcp/src/proxy/: backend.rs  builder.rs  mod.rs  service.rs  tests.rs
crates/tower-mcp/src/transport/: childproc.rs  http.rs  http_headers.rs  mod.rs  service.rs  stdio.rs  unix.rs  websocket.rs
crates/tower-mcp/tests/: channel_transport.rs  client_tasks.rs  http_client.rs  integration.rs  json_schema_2020_12.rs  macros.rs  messages_listen.rs  parse_error.rs  per_request_meta.rs  schema_validation.rs  server_discover.rs  stateless_disconnect.rs  stdio_loop.rs  subscriptions_listen.rs
docs/: dynamic-tools-design.md  extractor-design.md  router-composition-design.md
examples/: README.md  axum_embedding.rs  basic.rs  capability_filtering.rs  client_cli.rs  client_handler.rs  dynamic_capabilities.rs  dynamic_tools.rs  error_handling.rs  event_store.rs  external_api_auth.rs  external_notifications.rs  getting_started.rs  horizontal_scaling.rs  http_auth.rs  http_client.rs  http_client_cli.rs  http_server.rs  http_server_with_auth.rs  http_server_with_middleware.rs  http_server_with_oauth.rs  http_sse_client.rs  layered_server.rs  middleware.rs  middleware_showcase.rs  oauth_client.rs  proxy.rs  rate_limiting.rs  resource_templates.rs  sampling_server.rs  server_discover.rs  session_store.rs  skill_prompts.rs  stateless_http_client.rs  stdio_server.rs  stdio_server_with_middleware.rs  structured_output.rs  testing.rs  tool_macro.rs  tool_middleware.rs  (+5 more)
examples/codegen-mcp/: Cargo.toml
examples/codegen-mcp/src/: codegen.rs  main.rs  resources.rs  state.rs  tools.rs
examples/conformance-client/: Cargo.toml
examples/conformance-client/src/: auth_scenarios.rs  core_scenarios.rs  handlers.rs  main.rs
examples/conformance-server/: Cargo.toml
examples/conformance-server/src/: main.rs  prompts.rs  resources.rs  tools.rs
examples/crates-mcp/: Cargo.toml  Dockerfile  README.md  fly.toml
examples/crates-mcp/src/: main.rs  state.rs
examples/crates-mcp/src/prompts/: analyze.rs  compare.rs  mod.rs
examples/crates-mcp/src/resources/: crate_info.rs  mod.rs  recent_searches.rs
examples/crates-mcp/src/tools/: authors.rs  dependencies.rs  downloads.rs  info.rs  mod.rs  owners.rs  reverse_deps.rs  search.rs  summary.rs  user.rs  versions.rs
examples/crates-mcp/tests/: integration.rs
examples/markdownlint-mcp/: Cargo.toml  README.md
examples/markdownlint-mcp/src/: engine.rs  main.rs  resources.rs  tools.rs
examples/mcp-repl/: CHANGELOG.md  Cargo.toml  README.md
examples/mcp-repl/src/: editor.rs  elicit.rs  main.rs  style.rs
examples/notes-mcp/: Cargo.toml  README.md  docker-compose.yml
examples/notes-mcp/src/: main.rs  seed.rs  state.rs
examples/notes-mcp/src/prompts/: account_review.rs  mod.rs  prep_meeting.rs
examples/notes-mcp/src/resources/: customer.rs  mod.rs  recent_notes.rs
examples/notes-mcp/src/tools/: add_note.rs  delete_note.rs  get_customer.rs  list_customers.rs  mod.rs  search_customers.rs  search_notes.rs  update_customer.rs  update_note.rs
examples/skills/code-review/: SKILL.md
examples/skills/rust-error-handling/: SKILL.md
examples/sql-mcp/: Cargo.toml  config.toml  docker-compose.yml
examples/sql-mcp/seed/: mysql.sql  postgres.sql  sqlite.sql
examples/sql-mcp/src/: config.rs  db.rs  main.rs  prompts.rs  resources.rs  safety.rs  tools.rs
examples/tower-mcp-guide/: Cargo.toml
examples/tower-mcp-guide/src/: main.rs
src/: async_task.rs  auth.rs  client.rs  context.rs  error.rs  extract.rs  filter.rs  jsonrpc.rs  lib.rs  prompt.rs  protocol.rs  registry.rs  resource.rs  router.rs  secret.rs  session.rs  stateless.rs  testing.rs  tool.rs  tracing_layer.rs
src/client/: handler.rs  http.rs  mod.rs  oauth.rs  transport.rs
src/middleware/: mod.rs
src/oauth/: error.rs  middleware.rs  mod.rs  scope.rs  token.rs
src/transport/: childproc.rs  http.rs  mod.rs  service.rs  stdio.rs  websocket.rs
tests/: http_client.rs  integration.rs  jwks.rs  schema_validation.rs
tests/fixtures/: rsa_private.pem  rsa_public.jwk.json
tools/rmcp-compat/: Cargo.toml  README.md
tools/rmcp-compat/src/: main.rs
tower-mcp-types/: CHANGELOG.md  Cargo.toml
tower-mcp-types/src/: error.rs  protocol.rs
