[workspace]
resolver = "3"
members = [
    "crates/tower-mcp",
    "crates/tower-mcp-types",
    "crates/tower-mcp-macros",
    "examples/conformance-server",
    "examples/conformance-client",
    "examples/markdownlint-mcp",
    "examples/codegen-mcp",
    "examples/notes-mcp",
    "examples/sql-mcp",
]

[workspace.package]
version = "0.8.6"
edition = "2024"
rust-version = "1.90"
authors = ["Josh Rotenberg <joshrotenberg@gmail.com>"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/joshrotenberg/tower-mcp"

[workspace.dependencies]
# Internal crates
tower-mcp = { version = "0.8", path = "crates/tower-mcp" }
tower-mcp-types = { version = "0.8", path = "crates/tower-mcp-types" }
tower-mcp-macros = { version = "0.8", path = "crates/tower-mcp-macros" }

# Serialization
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

# Schema generation
schemars = "1.2"

# Async runtime
tokio = { version = "1", features = ["full"] }

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Web framework
axum = { version = "0.8", features = ["json", "ws"] }

# Error handling
thiserror = "2"

# Encoding
base64 = "0.22.1"

# Tower ecosystem
tower = { version = "0.5", features = ["util"] }
tower-service = "0.3"
tower-resilience = { version = "0.9", default-features = false, features = ["bulkhead", "ratelimiter", "coalesce"] }

# Async
futures = "0.3"
async-trait = "0.1"
