[package]
name = "tower-mcp-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "MCP protocol and error types for tower-mcp (no runtime dependencies)"
documentation = "https://docs.rs/tower-mcp-types"
homepage = "https://github.com/joshrotenberg/tower-mcp"
readme = "../../README.md"
keywords = ["mcp", "json-rpc", "ai", "llm", "protocol"]
categories = ["network-programming"]

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
base64.workspace = true
