[package]
name = "tower-mcp-types"
version.workspace = true
edition.workspace = true
rust-version.workspace = true
authors.workspace = true
license.workspace = true
repository.workspace = true
description = "Standalone MCP protocol types -- no Tower/Tokio required, WASM-safe, re-exported by tower-mcp"
documentation = "https://docs.rs/tower-mcp-types"
homepage = "https://github.com/joshrotenberg/tower-mcp"
readme = "../../README.md"
keywords = ["mcp", "json-rpc", "ai", "llm", "protocol"]
categories = ["network-programming"]

[features]
default = []
# Wire-format assertion helpers for JSON-RPC test cases.
testing = []

[dependencies]
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
base64.workspace = true
