[package]
name = "codegen-mcp"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"
description = "MCP server that helps AI agents build tower-mcp servers"
license = "MIT OR Apache-2.0"
publish = false

[dependencies]
# MCP server
tower-mcp = { path = "../.." }

# Async runtime
tokio = { version = "1", features = ["full", "sync"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1.2"

# Logging
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# CLI
clap = { version = "4", features = ["derive"] }
