[package]
name = "codegen-mcp"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "MCP server that helps AI agents build tower-mcp servers"
readme = "../../README.md"

[dependencies]
tower-mcp.workspace = true
tokio = { workspace = true, features = ["sync"] }
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
clap.workspace = true
tempfile = "3"
