[package]
name = "conformance-client"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false
description = "MCP conformance test suite client"
readme = "../../README.md"

[[bin]]
name = "conformance-client"
path = "src/main.rs"

[dependencies]
tower-mcp = { workspace = true, features = ["http-client", "oauth-client"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
reqwest = { version = "0.13", features = ["rustls", "json", "form"], default-features = false }
p256 = { version = "0.13", features = ["jwk", "ecdsa", "pem"] }
sec1 = { version = "0.7", features = ["pem"] }
base64.workspace = true
anyhow = "1"
async-trait.workspace = true
url = "2"
