[package]
name = "conformance-server"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false
description = "MCP conformance test suite server"
readme = "../../README.md"

[[bin]]
name = "conformance-server"
path = "src/main.rs"

[dependencies]
tower-mcp = { workspace = true, features = ["http", "oauth"] }
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
base64.workspace = true
axum.workspace = true
clap.workspace = true
