[package]
name = "crates-mcp"
version = "0.1.0"
edition = "2024"
publish = false
description = "Example MCP server for querying crates.io"

[[bin]]
name = "crates-mcp"
path = "src/main.rs"

[[test]]
name = "integration"
path = "tests/integration.rs"

[dependencies]
# Core MCP
tower-mcp = { path = "../..", features = ["http"] }

# Crates.io API client
crates_io_api = "0.12"

# Async runtime
tokio = { version = "1", features = ["full"] }

# CLI
clap = { version = "4", features = ["derive"] }

# Serialization
serde = { version = "1", features = ["derive"] }
serde_json = "1"

# Schema generation
schemars = "1"

# Tracing
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

# Tower middleware
tower = { version = "0.5", features = ["util", "timeout", "limit"] }
tower-http = { version = "0.6", features = ["trace"] }
tower-resilience.workspace = true

# HTTP server (for custom middleware)
axum = "0.8"
