[package]
name = "markdownlint-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false
description = "MCP server for markdown linting using mdbook-lint"
readme = "../../README.md"

[dependencies]
tower-mcp = { workspace = true, features = ["http"] }
mdbook-lint-core = "0.14"
mdbook-lint-rulesets = "0.14"
tokio.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
reqwest = { version = "0.12", features = ["rustls-tls"], default-features = false }
tracing.workspace = true
tracing-subscriber.workspace = true
thiserror.workspace = true
clap.workspace = true
axum.workspace = true
