[package]
name = "mcp-repl"
version = "0.1.0"
edition.workspace = true
rust-version.workspace = true
license.workspace = true
publish = false
description = "Interactive MCP client REPL: connects to any MCP server and turns its tools, prompts, and resources into the command set"

[[bin]]
name = "mcp-repl"
path = "src/main.rs"

[dependencies]
tower-mcp = { workspace = true, features = ["http-client"] }
async-trait.workspace = true
tokio.workspace = true
serde_json.workspace = true
clap.workspace = true
tracing-subscriber.workspace = true
reedline = "0.49"
nu-ansi-term = "0.50"
