[package]
name = "notes-mcp"
version = "0.1.0"
edition = "2024"
publish = false
description = "Example MCP server for Redis-backed customer notes"

[[bin]]
name = "notes-mcp"
path = "src/main.rs"

[dependencies]
tower-mcp = { path = "../.." }
redis = { version = "1", features = ["tokio-comp", "json"] }
tokio = { version = "1", features = ["full"] }
clap = { version = "4", features = ["derive"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
schemars = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
