[package]
name = "notes-mcp"
version = "0.1.0"
edition.workspace = true
license.workspace = true
publish = false
description = "Example MCP server for Redis-backed customer notes"
readme = "../../README.md"

[[bin]]
name = "notes-mcp"
path = "src/main.rs"

[dependencies]
tower-mcp.workspace = true
redis = { version = "1", features = ["tokio-comp", "json"] }
tokio.workspace = true
clap.workspace = true
serde.workspace = true
serde_json.workspace = true
schemars.workspace = true
tracing.workspace = true
tracing-subscriber.workspace = true
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4"] }
