[package]
name = "tower-mcp-guide"
version = "0.1.0"
edition = "2024"
publish = false
description = "Meta MCP server with prompts for exploring tower-mcp examples"

[[bin]]
name = "tower-mcp-guide"
path = "src/main.rs"

[dependencies]
tower-mcp = { path = "../.." }
tokio = { version = "1", features = ["full"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
